@@ -1,0 +1,6 @@
+package de.ids_mannheim.de.init;
+
+public interface VCLoader {
+
+    void recachePredefinedVC();
+}
