@@ -36,7 +36,7 @@ default.foundry.orthography = opennlp
 default.foundry.dependency = malt
 default.foundry.constituent = corenlp
 default.foundry.morphology = marmot
-default.foundry.surface = base 
+default.foundry.surface = base
 
 ## delete configuration (default hard)
 # delete.auto.group = hard
