@@ -1,0 +1,11 @@
+package de.ids_mannheim.de.init;
+
+public class VCLoaderImpl implements VCLoader {
+
+    @Override
+    public void recachePredefinedVC () {
+        // TODO Auto-generated method stub
+        
+    }
+
+}
