@@ -6,7 +6,9 @@
 25/04/2019
    - Updated Jetty version due to vulnerabilities (margaretha)
 27/06/2019
-   - Updated Jetty version, fixed server hanging problem (margaretha)  
+   - Updated Jetty version, fixed server hanging problem (margaretha)
+03/07/2019
+   - Added VCLoader interface (margaretha)
 
 # version 0.61.6
 06/02/2019
